--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/Base.lproj/BTSweepAccountVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/Base.lproj/BTSweepAccountVC.xib
@@ -27,6 +27,9 @@
                             <rect key="frame" x="12" y="34" width="315" height="17.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="cy5-dF-wgV"/>
+                            </connections>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mlh-IM-BCL">
                             <rect key="frame" x="348" y="27.5" width="30" height="30"/>
@@ -74,8 +77,8 @@
                     <color key="textColor" red="0.20392156859999999" green="0.20392156859999999" blue="0.20392156859999999" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.000000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R28-8W-8JL">
-                    <rect key="frame" x="88.5" y="161" width="69.5" height="12"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R28-8W-8JL">
+                    <rect key="frame" x="88.5" y="161" width="51" height="12"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="12" id="bME-4K-94C"/>
                     </constraints>
