--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Home/View/Base.lproj/BTSharePoolCell.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Home/View/Base.lproj/BTSharePoolCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -48,38 +48,20 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="flW-io-lc6">
-                                <rect key="frame" x="20" y="65" width="46" height="16"/>
+                                <rect key="frame" x="20" y="65" width="27.5" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="16" id="3PX-M9-YrS"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qeA-Yx-Ia7">
-                                <rect key="frame" x="71" y="69" width="0.0" height="12"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="12" id="5mR-i6-D6i"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gg5-QT-92t">
-                                <rect key="frame" x="20" y="89" width="7" height="12"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gg5-QT-92t">
+                                <rect key="frame" x="20" y="89" width="27.5" height="12"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="12" id="RX6-ux-tEz"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zly-EQ-q5D">
-                                <rect key="frame" x="32" y="89" width="0.0" height="12"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="12" id="YS3-Ba-70f"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -93,38 +75,20 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="trH-M1-RgD">
-                                <rect key="frame" x="127.5" y="65" width="46" height="16"/>
+                                <rect key="frame" x="127.5" y="65" width="27.5" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="16" id="j8n-Ys-jVb"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9bt-s8-Hby">
-                                <rect key="frame" x="178.5" y="69" width="0.0" height="12"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="12" id="5ur-Hz-kdC"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cm1-pl-v4J">
-                                <rect key="frame" x="127.5" y="89" width="7" height="12"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cm1-pl-v4J">
+                                <rect key="frame" x="127.5" y="89" width="27.5" height="12"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="12" id="Wfn-Dh-wj6"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jhc-3E-sGx">
-                                <rect key="frame" x="139.5" y="89" width="0.0" height="12"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="12" id="Kao-lh-CCd"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -293,11 +257,8 @@
                             <constraint firstItem="Gg5-QT-92t" firstAttribute="top" secondItem="flW-io-lc6" secondAttribute="bottom" constant="8" id="5Vg-PR-btj"/>
                             <constraint firstItem="cm1-pl-v4J" firstAttribute="centerY" secondItem="Gg5-QT-92t" secondAttribute="centerY" id="7rV-su-nRw"/>
                             <constraint firstItem="Gg5-QT-92t" firstAttribute="leading" secondItem="flW-io-lc6" secondAttribute="leading" id="8YK-HQ-vps"/>
-                            <constraint firstItem="9bt-s8-Hby" firstAttribute="leading" secondItem="trH-M1-RgD" secondAttribute="trailing" constant="5" id="8kR-eB-FSK"/>
                             <constraint firstItem="NJb-ll-zuC" firstAttribute="top" secondItem="Gg5-QT-92t" secondAttribute="bottom" id="995-QI-kiQ"/>
                             <constraint firstItem="trH-M1-RgD" firstAttribute="leading" secondItem="vGI-to-NRC" secondAttribute="leading" id="BPa-JG-qT5"/>
-                            <constraint firstItem="Jhc-3E-sGx" firstAttribute="leading" secondItem="cm1-pl-v4J" secondAttribute="trailing" constant="5" id="Con-En-Ftc"/>
-                            <constraint firstItem="Zly-EQ-q5D" firstAttribute="centerY" secondItem="Gg5-QT-92t" secondAttribute="centerY" id="HXi-Es-3Qk"/>
                             <constraint firstItem="SDZ-wG-m4T" firstAttribute="top" secondItem="qR3-6G-h96" secondAttribute="bottom" constant="14" id="Ib9-WE-YeQ"/>
                             <constraint firstItem="flW-io-lc6" firstAttribute="top" secondItem="SDZ-wG-m4T" secondAttribute="bottom" constant="5" id="KSk-1w-laQ"/>
                             <constraint firstItem="flW-io-lc6" firstAttribute="leading" secondItem="qR3-6G-h96" secondAttribute="leading" id="L9O-JM-3kC"/>
@@ -307,15 +268,10 @@
                             <constraint firstAttribute="bottom" secondItem="d31-mX-iDT" secondAttribute="bottom" id="QJR-8v-mT0"/>
                             <constraint firstItem="SDZ-wG-m4T" firstAttribute="leading" secondItem="qR3-6G-h96" secondAttribute="leading" id="Sen-Zz-N2W"/>
                             <constraint firstItem="vGI-to-NRC" firstAttribute="centerX" secondItem="IXp-eu-DxX" secondAttribute="centerX" id="Skm-eI-3SD"/>
-                            <constraint firstItem="qeA-Yx-Ia7" firstAttribute="bottom" secondItem="flW-io-lc6" secondAttribute="bottom" id="T3h-ip-udZ"/>
                             <constraint firstItem="d31-mX-iDT" firstAttribute="top" secondItem="IXp-eu-DxX" secondAttribute="top" id="Uis-Rp-2Jb"/>
-                            <constraint firstItem="Zly-EQ-q5D" firstAttribute="leading" secondItem="Gg5-QT-92t" secondAttribute="trailing" constant="5" id="X3P-B6-sAC"/>
                             <constraint firstItem="cm1-pl-v4J" firstAttribute="leading" secondItem="trH-M1-RgD" secondAttribute="leading" id="Xhu-Kx-yuP"/>
-                            <constraint firstItem="9bt-s8-Hby" firstAttribute="bottom" secondItem="trH-M1-RgD" secondAttribute="bottom" id="ad4-pN-cdY"/>
                             <constraint firstAttribute="trailing" secondItem="d31-mX-iDT" secondAttribute="trailing" id="cno-fn-tNg"/>
-                            <constraint firstItem="Jhc-3E-sGx" firstAttribute="centerY" secondItem="cm1-pl-v4J" secondAttribute="centerY" id="hNS-uG-Xbb"/>
                             <constraint firstAttribute="bottom" secondItem="NJb-ll-zuC" secondAttribute="bottom" id="iXW-Bn-YZV"/>
-                            <constraint firstItem="qeA-Yx-Ia7" firstAttribute="leading" secondItem="flW-io-lc6" secondAttribute="trailing" constant="5" id="j3b-ur-Bua"/>
                             <constraint firstItem="NJb-ll-zuC" firstAttribute="leading" secondItem="IXp-eu-DxX" secondAttribute="leading" id="jVV-S5-p9l"/>
                             <constraint firstAttribute="trailing" secondItem="NJb-ll-zuC" secondAttribute="trailing" id="llX-q4-ajs"/>
                             <constraint firstItem="qR3-6G-h96" firstAttribute="leading" secondItem="IXp-eu-DxX" secondAttribute="leading" constant="20" id="mGg-Nj-LI7"/>
@@ -340,16 +296,14 @@
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
-                <outlet property="coinName" destination="qeA-Yx-Ia7" id="2Ad-fZ-rOK"/>
+                <outlet property="coinName" destination="GNU-oh-dNF" id="2U8-yl-u4e"/>
                 <outlet property="contributionValue" destination="i3O-6m-Bcf" id="dua-fo-yHG"/>
                 <outlet property="destroyTotal" destination="trH-M1-RgD" id="jQ3-fw-PvU"/>
                 <outlet property="levelBtn" destination="uAC-y0-ROZ" id="SyC-zS-Egm"/>
                 <outlet property="sections" destination="9SW-1v-4je" id="mbx-vV-14Z"/>
                 <outlet property="starView" destination="NDi-Xa-Rx2" id="WXR-lL-MRA"/>
                 <outlet property="subAmount" destination="Gg5-QT-92t" id="S96-KF-ypl"/>
-                <outlet property="subCoin" destination="Zly-EQ-q5D" id="UX5-pE-Jip"/>
                 <outlet property="subOutput" destination="cm1-pl-v4J" id="TkG-79-ekK"/>
-                <outlet property="subOutputCoin" destination="Jhc-3E-sGx" id="HNj-XJ-MAG"/>
                 <outlet property="totalOutput" destination="hNA-4l-dzC" id="OGe-2H-qK3"/>
                 <outlet property="yesEarnings" destination="flW-io-lc6" id="OkU-Se-fYb"/>
             </connections>
