--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/Base.lproj/BTProfileViewController.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/Base.lproj/BTProfileViewController.xib
@@ -41,7 +41,7 @@
                             <rect key="frame" x="12" y="20" width="390" height="116"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zzt-nQ-KAO">
-                                    <rect key="frame" x="27.5" y="25.5" width="65" height="65"/>
+                                    <rect key="frame" x="13" y="25.5" width="65" height="65"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="65" id="eHg-6A-ikv"/>
                                         <constraint firstAttribute="width" secondItem="zzt-nQ-KAO" secondAttribute="height" multiplier="1:1" id="xad-SA-PRi"/>
@@ -51,13 +51,19 @@
                                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                             <real key="value" value="32.5"/>
                                         </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                            <real key="value" value="1"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                            <color key="value" red="0.70588235290000001" green="0.56470588239999997" blue="0.37647058820000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
                                         <action selector="userHeadClickAction:" destination="-1" eventType="touchUpInside" id="89m-mO-6Oa"/>
                                     </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5oE-lZ-dql">
-                                    <rect key="frame" x="104.5" y="40.5" width="0.0" height="14"/>
+                                    <rect key="frame" x="90" y="40.5" width="0.0" height="14"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="14" id="1Vv-X6-Eh9"/>
                                     </constraints>
@@ -66,7 +72,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yXj-49-0Zw">
-                                    <rect key="frame" x="109.5" y="36.5" width="63" height="22"/>
+                                    <rect key="frame" x="95" y="36.5" width="63" height="22"/>
                                     <color key="backgroundColor" red="0.6588235294117647" green="0.52549019607843139" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="63" id="mby-tc-Mwp"/>
@@ -83,7 +89,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ct-3a-wa6">
-                                    <rect key="frame" x="104.5" y="66.5" width="0.0" height="12"/>
+                                    <rect key="frame" x="90" y="66.5" width="0.0" height="12"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="12" id="PBh-xw-M0R"/>
                                     </constraints>
@@ -92,7 +98,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F0U-H0-QcP">
-                                    <rect key="frame" x="104.5" y="57.5" width="30" height="30"/>
+                                    <rect key="frame" x="90" y="57.5" width="30" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="30" id="1bh-lt-Rth"/>
                                         <constraint firstAttribute="height" constant="30" id="anQ-Lb-iFd"/>
@@ -117,7 +123,7 @@
                                 <constraint firstItem="F0U-H0-QcP" firstAttribute="leading" secondItem="1ct-3a-wa6" secondAttribute="trailing" id="se4-G3-c5C"/>
                                 <constraint firstItem="zzt-nQ-KAO" firstAttribute="centerY" secondItem="r5d-T6-BvE" secondAttribute="centerY" id="tKq-dV-tcA"/>
                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="yXj-49-0Zw" secondAttribute="trailing" constant="10" id="uox-va-PlO"/>
-                                <constraint firstItem="zzt-nQ-KAO" firstAttribute="leading" secondItem="r5d-T6-BvE" secondAttribute="leading" constant="27.5" id="zqD-Ff-1jd"/>
+                                <constraint firstItem="zzt-nQ-KAO" firstAttribute="leading" secondItem="r5d-T6-BvE" secondAttribute="leading" constant="13" id="zqD-Ff-1jd"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
